Properly align icon and fix right: -2px

--- a/modules/system/assets/ui/less/form.less
+++ b/modules/system/assets/ui/less/form.less
@@ -404,10 +404,12 @@
     .btn {
         background: transparent;
         position: absolute;
-        right: -2px;
+        right: 0;
         top: 50%;
         transform: translateY(-50%);
         height: 100%;
+        
+        border-radius: 0;
         color: lighten(@color-form-field-recordfinder-btn, 15%);
         text-shadow: none;
         padding-left: 15px;
